fix dashboard spacing

--- a/styles.css
+++ b/styles.css
@@ -377,7 +377,7 @@ body {
   grid-area: 1 / 1 / 3 / 2;
   color: white;
   display: grid;
-  grid-template: 1fr 3fr 4fr / 1fr;
+  grid-template: 0.5fr 2fr 4fr / 1fr;
   gap: 10px;
   box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 3px 2px;
 }
